--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,7 @@ body {
 }
 
 /* ----- ----- HEADER ----- ----- */
+
 header {
     background: url('../img/fondo.png') #946695;
     background-repeat: no-repeat;
@@ -80,4 +81,45 @@ header .contenedor-texto .texto .profesion {
     line-height: 25px;
 }
 
+/* ----- ----- MAIN ----- ----- */
 
+.main .contenedor {
+    overflow: visible;
+}
+
+.main .acerca-de {
+    text-align: center;
+}
+
+.main .acerca-de .foto {
+    margin-top: -60px;
+}
+
+.main .acerca-de .foto img {
+    vertical-align: top;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.2);
+}
+
+.main .acerca-de .texto {
+    color: #5A5A5A;
+    font-weight: 600;
+    font-size: 1em;
+    line-height: 30px;
+    width: 80%;
+    margin: 40px auto 60px auto;
+}
+
+.main .acerca-de .texto .titulo {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 40px;
+    font-weight: 300;
+    color: #98279A;
+    text-align: center;
+}
+
+.main .acerca-de .texto .bold {
+    color: #3895ea;
+    text-decoration: underline;
+}
