--- a/css/estilos.css
+++ b/css/estilos.css
@@ -179,3 +179,126 @@ header .contenedor-texto .texto .profesion {
     font-size: 14px;
     color: #5A5A5A;
 }
+
+/* ----- ----- FOOTER ----- ----- */
+footer .contacto {
+    padding: 60px 0;
+}
+
+footer .contacto .titulo {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 40px;
+    font-weight: 300;
+    color: #98279A;
+    text-align: center;
+}
+
+footer .contacto .formulario {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .contacto .formulario input[type="text"],
+footer .contacto .formulario input[type="email"],
+footer .contacto .formulario textarea {
+    border: 2px solid #cecece;
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-size: 20px;
+    color: #a4a4a4;
+}
+
+footer .contacto .formulario input[type="text"],
+footer .contacto .formulario input[type="email"] {
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+footer .contacto .formulario textarea {
+    width: 100%;
+    height: 100px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100px;
+    max-height: 300px;
+    margin-bottom: 15px;
+}
+
+footer .contacto .formulario .boton {
+    margin: auto;
+    background: #98279A;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    padding: 15px 40px;
+    cursor: pointer;
+}
+
+footer .contacto .formulario .boton:hover {
+    background: #946695;
+}
+
+footer .contacto .formulario input[type="text"]:focus,
+footer .contacto .formulario input[type="email"]:focus,
+footer .contacto .formulario textarea:focus {
+    border: 2px solid #98279A !important;
+}
+
+footer .contacto .formulario input[type="text"]:focus-visible,
+footer .contacto .formulario input[type="email"]:focus-visible,
+footer .contacto .formulario textarea:focus-visible {
+    border: 2px solid #98279A;
+    outline: transparent;
+    background: transparent;
+}
+
+footer .redes-sociales {
+    background: #946695;
+    padding: 60px 0;
+}
+
+footer .redes-sociales .contenedor {
+    display: flex;
+    justify-content: center;
+}
+
+footer .redes-sociales a {
+    color: #fff;
+    text-align: center;
+    width: 100px;
+    display: block;
+    padding: 15px 0;
+    border-radius: 5px;
+    font-size: 30px;
+    margin: 0 20px;
+}
+
+footer .redes-sociales .instagram:hover { background: #c13584; }
+footer .redes-sociales .facebook:hover { background: #3b5998; }
+footer .redes-sociales .twitter:hover { background: #1da1f2; }
+footer .redes-sociales .github:hover { background: #333; }
+footer .redes-sociales .linkedin:hover { background: #0077b5; }
+
+/* ----- ----- MEDIA QUERIES ----- ----- */
+@media screen and (max-width: 800px) {
+    header .menu {
+        text-align: center;
+    }
+
+    .main .trabajos .contenedor .trabajo {
+        width: 46%;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    header .contenedor-texto .texto .nombre {
+        font-size: 35px;
+    }
+
+    footer .redes-sociales .contenedor {
+        flex-wrap: wrap;
+        padding: 20px 0;
+    }
+}
